Añadidos endpoints de timeline y modificada obtención de datos para poder utilizar los datos

--- a/Borealis.Parser/configuration.development.json
+++ b/Borealis.Parser/configuration.development.json
@@ -8,7 +8,8 @@
     "measurement_endpoint": "/measurement",
     "station_endpoint": "/station",
     "magnitude_endpoint": "/magnitude",
-    "event_endpoint": "/event"
+    "event_endpoint": "/event",
+    "timeline_endpoint": "/timeline"
   },
   "density": {
     "main_page_url": "http://www-2.munimadrid.es/TSE6/control/seleccionDatosBarrio",
