--- a/Borealis.Web/package.json
+++ b/Borealis.Web/package.json
@@ -12,16 +12,18 @@
     "private": true,
     "dependencies": {
         "@angular/animations": "~11.0.4",
-        "@angular/cdk": "^11.1.0",
+        "@angular/cdk": "^11.2.13",
         "@angular/common": "~11.0.4",
         "@angular/compiler": "~11.0.4",
         "@angular/core": "~11.0.4",
+        "@angular/flex-layout": "^12.0.0-beta.34",
         "@angular/forms": "~11.0.4",
         "@angular/platform-browser": "^11.0.9",
         "@angular/platform-browser-dynamic": "~11.0.4",
         "@angular/router": "~11.0.4",
-        "@swimlane/ngx-charts": "^17.0.0",
+        "@swimlane/ngx-charts": "^17.0.1",
         "checklist-model": "^1.0.0",
+        "clean": "^4.0.2",
         "rxjs": "~6.6.0",
         "tslib": "^2.0.0",
         "zone.js": "~0.10.2"
