--- a/Borealis.Web/package.json
+++ b/Borealis.Web/package.json
@@ -22,10 +22,15 @@
     "@angular/platform-browser": "^11.0.9",
     "@angular/platform-browser-dynamic": "~11.0.4",
     "@angular/router": "~11.0.4",
+    "@asymmetrik/ngx-leaflet": "^8.1.0",
+    "@asymmetrik/ngx-leaflet-markercluster": "^5.0.1",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@swimlane/ngx-charts": "^17.0.1",
+    "@types/leaflet.markercluster": "^1.4.4",
     "checklist-model": "^1.0.0",
     "clean": "^4.0.2",
+    "leaflet": "^1.7.1",
+    "leaflet.markercluster": "^1.5.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -35,6 +40,7 @@
     "@angular/cli": "~11.0.4",
     "@angular/compiler-cli": "~11.0.4",
     "@types/jasmine": "~3.6.0",
+    "@types/leaflet": "^1.7.1",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
